# cmd/api/api.go
@@ -24,6 +24,11 @@ type config struct {
 	db     dbConfig
 	env    string
 	apiURL string
+	mail   mailConfig
+}
+
+type mailConfig struct {
+	expiry time.Duration
 }
 
 type dbConfig struct {
@@ -79,6 +84,11 @@ func (app *application) mount() http.Handler {
 
 			r.Group(func(r chi.Router) {
 				r.Get("/feed", app.getUserFeedHandler)
+			})
+
+			// Public routes
+			r.Route("/authentication", func(r chi.Router) {
+				r.Post("/user", app.registerUserHandler)
 			})
 		})
 
